# movie-recommender

./: .pre-commit-config.yaml  README.md  pyproject.toml
logs/movielens-ncf/version_1/: events.out.tfevents.1686676722.mainframe.local.78029.0  hparams.yaml
src/movielens_ncf/: dataset.py  model.py  train.py
src/shiny_app/: app.py
